@startuml
' 这个类图存储所有核心类的定义、属性和方法。
' 它反映了当前最新的架构。

' --- 核心协调层 ---

class MainCoodinator {
    + service: ServiceContainer
    + C_CTRL: CardController
    + 这个类相当于宰相/元老院，用来管理所有的附属controller
}

class CardController {
    + service: ServiceContainer
    + ui: AnalysisPage
    + cond_presenter: ConditionalCardPresenter
    + fixed_presenter: FixedCardPresenter
    + __init__(service, ui)
    + create_ytd_card()
    + 这个类用来管理所有的卡片分析相关事宜
}

MainCoodinator *-- CardController

' --- Presenter 层 ---

class ConditionalCardPresenter {
    + __init__(data, recipe, engine, manager)
    + generate() : list
}

class FixedCardPresenter {
    + __init__(data, recipe)
    + generate() : list
}

CardController *-- ConditionalCardPresenter
CardController *-- FixedCardPresenter


' --- 服务与引擎层 ---

class InsightEngine {
    + __init__(card_recipe, services)
    + run(actionUnits: list) : list
    + cards: dict
    + ICS: InsightCacheService
}

class InsightManager {
    + __init__(ICS)
    + add_cards(insights: list) : None
    + get_current_cards() : list
}

class InsightCacheService {
    ' 负责洞见的历史数据读写
}

InsightEngine o-- InsightManager
InsightManager o-- InsightCacheService


' --- Detector 层 ---

class Detectors extends BaseDetecor{
    + __init__(ICS, config)
    + match(au: dict) : insight_pack
    ' ... 其他内部方法 ...
}

class BaseDetecor {
    + match(au: dict)
}

InsightEngine o-- Detectors

@enduml
